fixed cart item alignment issue with image

--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 8rem;
+  min-width: 10rem;
   max-width: 10rem;
   height: 15rem;
 }
@@ -112,6 +112,7 @@
   .item-details__product-name {
     margin-right: 0;
     margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
   }
   .footer__quantity {
     width: 100%;
